@@ -13,14 +13,15 @@
     ],
     "require": {
         "php": ">=7.0",
-        "simplecomplex/utils": "^1.1 || dev-develop"
+        "simplecomplex/utils": "^1.4 || dev-develop"
     },
     "suggest": {
         "simplecomplex/inspect": "Great for logging; better variable dumps and traces."
     },
     "autoload": {
         "psr-4": {
-            "SimpleComplex\\Validate\\": "src/"
+            "SimpleComplex\\Validate\\": "src/",
+            "SimpleComplex\\Tests\\Validate\\": "tests/src/"
         }
     }
 }
