@@ -1,0 +1,25 @@
+<?php
+/**
+ * SimpleComplex PHP Validate
+ * @link      https://github.com/simplecomplex/php-validate
+ * @copyright Copyright (c) 2017-2018 Jacob Friis Mathiasen
+ * @license   https://github.com/simplecomplex/php-validate/blob/master/LICENSE (MIT License)
+ */
+declare(strict_types=1);
+
+namespace SimpleComplex\Tests\Validate;
+
+/**
+ * phpunit test helper.
+ *
+ * @package SimpleComplex\Tests\Validate
+ */
+class TestHelper extends \SimpleComplex\Tests\Utils\TestHelper
+{
+    /**
+     * Expected path to tests' src dir, relative to the vendor dir.
+     *
+     * @var string
+     */
+    const PATH_TESTS = '/simplecomplex/validate/tests/src';
+}
