@@ -1,3 +1,7 @@
+SimpleComplex/Validate 1.x, 2018-05-21
+--------------------------------------
+- Prepare for tests.
+
 SimpleComplex/Validate 1.x, 2018-04-07
 --------------------------------------
 - Release 1.0.1.
